trying to implement TPT

--- a/Golestan/appsettings.json
+++ b/Golestan/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
+  "Connectionstrings": {
     "Lolita": "Data Source=.\\SYSTEM_GROUP; Database=LolitaDB; uid=sa; Password=##password##; MultipleActiveResultSets=True; TrustServerCertificate=True;"
   }
 }
